Fix: center nav-bg-img behind nav links

--- a/css/index9.css
+++ b/css/index9.css
@@ -92,8 +92,9 @@ body {
   height: 200px;
   position: absolute;
   z-index: -1;
-  margin-top: -120px;
-  left: -20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   pointer-events: none;
 }
 
